--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ Repository = "https://github.com/FuouM/ComfyUI-StyleTransferPlus"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "fuoumarinas"
 DisplayName = "ComfyUI-StyleTransferPlus"
 Icon = ""
